Remove AudioBufferCallback

According to the WebAudio spec, the AudioBufferCallback interface
should not exist.  Instead we should have a DecodeSuccessCallback and
DecodeErrorCallback functions.

However, we need to keep a reference to the callbacks so that they
don't get GC'ed before decodeAudioData has a chance to call them.
These references are placed on a HeapDeque when decodeAudioData is
called and removed after the callback is called when decodeAudioData
is finished.

BUG=717723
TEST=none

Change-Id: Ib71a21c0a95181d0ff35d266768605efe07a7279