third_party/WebKit/Source/modules/webaudio/AsyncAudioDecoder.h
@@ -34,8 +34,9 @@ namespace blink {
 
 class BaseAudioContext;
 class AudioBuffer;
-class AudioBufferCallback;
 class AudioBus;
+class DecodeErrorCallback;
+class DecodeSuccessCallback;
 class DOMArrayBuffer;
 class ScriptPromiseResolver;
 
@@ -58,8 +59,8 @@ class AsyncAudioDecoder {
   // appropriately when finished.
   void DecodeAsync(DOMArrayBuffer* audio_data,
                    float sample_rate,
-                   AudioBufferCallback* success_callback,
-                   AudioBufferCallback* error_callback,
+                   DecodeSuccessCallback*,
+                   DecodeErrorCallback*,
                    ScriptPromiseResolver*,
                    BaseAudioContext*);
 
@@ -67,13 +68,13 @@ class AsyncAudioDecoder {
   AudioBuffer* CreateAudioBufferFromAudioBus(AudioBus*);
   static void DecodeOnBackgroundThread(DOMArrayBuffer* audio_data,
                                        float sample_rate,
-                                       AudioBufferCallback* success_callback,
-                                       AudioBufferCallback* error_callback,
+                                       DecodeSuccessCallback*,
+                                       DecodeErrorCallback*,
                                        ScriptPromiseResolver*,
                                        BaseAudioContext*);
   static void NotifyComplete(DOMArrayBuffer* audio_data,
-                             AudioBufferCallback* success_callback,
-                             AudioBufferCallback* error_callback,
+                             DecodeSuccessCallback*,
+                             DecodeErrorCallback*,
                              AudioBus*,
                              ScriptPromiseResolver*,
                              BaseAudioContext*);
